0007092: Removed ALL keyword, renamed ChannelMap and related classes and methods, added methods to NodeChannels, deleted relevant sym_node_channel_ctl rows during unregistration, excluded last_extract_time from sync, and updated last_extract_time description